idf_component_register(SRCS "main.cpp" 
                            "src/dht_handler.cpp"
                            "src/wifi_connection.cpp"
                            "src/diode.cpp" 
                            "src/http_request.cpp"
                            "src/moisture_sensor.cpp"
                    INCLUDE_DIRS "./include")
